# bike-sharing-demand

./: .gitignore  .pdm-python  pyproject.toml  service.py  train.py
artifacts/: MLmodel  model.pkl
code_snippets/: setting_env.md
data/storage/: bike_sharing_train_features.csv
mlruns/0/: meta.yaml
mlruns/574570276396380825/: meta.yaml
mlruns/574570276396380825/055e7b0805d94380a0c5ac2a120cd3f1/: meta.yaml
mlruns/574570276396380825/056de5d2c7d64f7081ed8185220ae632/: meta.yaml
mlruns/574570276396380825/061f4fb59fb448b4a7a5a257fdfcdc98/: meta.yaml
mlruns/574570276396380825/0dcd1c9c97ae48b3ac74e328e6b50100/: meta.yaml
mlruns/574570276396380825/105fd74801c24130bf1707c4280c05a3/: meta.yaml
mlruns/574570276396380825/1197d020bf5440d0bc2328a09cd3ab31/: meta.yaml
mlruns/574570276396380825/142fb2106227410a802f37edccba6670/: meta.yaml
mlruns/574570276396380825/15bbe5c351c045efbc8029e97c9e0f44/: meta.yaml
mlruns/574570276396380825/1ce09f42d6c74f0c91de7f8ecb08f456/: meta.yaml
mlruns/574570276396380825/229cadbe38af42ff9e25900bf9c530fb/: meta.yaml
mlruns/574570276396380825/294ad4216b3e4f2fb7d76e62bce5a859/: meta.yaml
mlruns/574570276396380825/2b4f53dc7ae747c68a612cfdc4c7413b/: meta.yaml
mlruns/574570276396380825/2f567be8764c422cbf81998bb72ece2c/: meta.yaml
mlruns/574570276396380825/3005641cd192452390ee7f4ac1c9a3a8/: meta.yaml
mlruns/574570276396380825/3201cd3e17bb4a69ae7ae41e6a1213b1/: meta.yaml
mlruns/574570276396380825/37820c7037aa48dabfe2031540ae106e/: meta.yaml
src/: preprocess.py
src/common/: logger.py
(+588 files in other folders)
